syntax = "proto3";

// src depends on this. Change it carefully.
package proto_frj_ngn;


// ======================================================
// Common types needed for all games.
// ======================================================

enum ProtoGameType {
    UNSPECIFIED_GAME_TYPE = 0;
    LOVE_LETTER = 1;
    LOST_CITIES = 2;
}

message ProtoGameDataHandshake {
    string player_id = 1;
    string game_id = 2;
    ProtoGameType game_type = 3;
}

message ProtoGameDataStateReq {
    // Empty: This means "send me the latest state for the game stream I have opened".
}
